
[gd_scene load_steps=12 format=1]

[ext_resource path="res://final.gd" type="Script" id=1]
[ext_resource path="res://menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://DialogParser.gd" type="Script" id=3]
[ext_resource path="res://tileset.res" type="TileSet" id=4]
[ext_resource path="res://enemy_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy_2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Wizard5.tscn" type="PackedScene" id=8]
[ext_resource path="res://Dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://end_titles.tscn" type="PackedScene" id=11]

[node name="Node2D" type="Node2D"]

transform/scale = Vector2( 2, 2 )
script/script = ExtResource( 1 )

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="DialogParser" type="Node" parent="."]

script/script = ExtResource( 3 )

[node name="floor" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -196625, 17, -196624, 95, -196623, 95, -196622, 95, -196621, 95, -196620, 95, -196619, 95, -196618, 95, -196617, 95, -196616, 95, -196615, 95, -196614, 95, -196613, 95, -196612, 95, -196611, 95, -196610, 95, -196609, 95, -262144, 95, -262143, 95, -262142, 95, -262141, 95, -262140, 95, -262139, 95, -262138, 95, -262137, 95, -262136, 95, -262135, 95, -262134, 95, -262133, 95, -262132, 95, -262131, 95, -262130, 95, -262129, 95, -262128, 95, -262127, 95, -262126, 95, -262125, 95, -131089, 17, -131088, 17, -131087, 17, -131086, 17, -131085, 16, -131084, 17, -131083, 17, -131082, 17, -131081, 17, -131080, 17, -131079, 17, -131078, 17, -131077, 17, -131076, 17, -131075, 17, -131074, 17, -131073, 17, -196608, 17, -196607, 17, -196606, 17, -196605, 17, -196604, 17, -196603, 17, -196602, 17, -196601, 95, -196600, 95, -196599, 95, -196598, 17, -196597, 17, -196596, 17, -196595, 17, -196594, 17, -196593, 17, -196592, 17, -196591, 17, -196590, 17, -196589, 17, -65553, 17, -65552, 17, -65551, 17, -65550, 17, -65549, 17, -65548, 17, -65547, 17, -65546, 17, -65545, 16, -65544, 17, -65543, 17, -65542, 17, -65541, 17, -65540, 17, -65539, 17, -65538, 17, -65537, 17, -131072, 17, -131071, 17, -131070, 17, -131069, 17, -131068, 17, -131067, 17, -131066, 17, -131065, 17, -131064, 17, -131063, 17, -131062, 17, -131061, 17, -131060, 17, -131059, 17, -131058, 17, -131057, 17, -131056, 17, -131055, 17, -131054, 17, -131053, 17, -17, 17, -16, 17, -15, 16, -14, 17, -13, 17, -12, 17, -11, 17, -10, 17, -9, 17, -8, 17, -7, 17, -6, 17, -5, 17, -4, 17, -3, 17, -2, 17, -1, 4, -65536, 5, -65535, 5, -65534, 5, -65533, 5, -65532, 5, -65531, 5, -65530, 5, -65529, 5, -65528, 5, -65527, 5, -65526, 5, -65525, 5, -65524, 5, -65523, 5, -65522, 5, -65521, 5, -65520, 5, -65519, 6, -65518, 17, -65517, 17, 65519, 17, 65520, 17, 65521, 17, 65522, 17, 65523, 17, 65524, 16, 65525, 17, 65526, 17, 65527, 17, 65528, 17, 65529, 17, 65530, 15, 65531, 17, 65532, 17, 65533, 16, 65534, 17, 65535, 9, 0, 8, 1, 8, 2, 8, 3, 8, 4, 8, 5, 8, 6, 8, 7, 8, 8, 8, 9, 8, 10, 8, 11, 8, 12, 8, 13, 8, 14, 8, 15, 8, 16, 8, 17, 7, 18, 17, 19, 17, 131055, 17, 131056, 17, 131057, 17, 131058, 16, 131059, 17, 131060, 17, 131061, 17, 131062, 15, 131063, 17, 131064, 17, 131065, 17, 131066, 17, 131067, 17, 131068, 17, 131069, 17, 131070, 17, 131071, 9, 65536, 8, 65537, 8, 65538, 8, 65539, 8, 65540, 8, 65541, 8, 65542, 8, 65543, 8, 65544, 8, 65545, 8, 65546, 8, 65547, 8, 65548, 8, 65549, 8, 65550, 8, 65551, 8, 65552, 8, 65553, 7, 65554, 17, 65555, 17, 196591, 17, 196592, 17, 196593, 17, 196594, 17, 196595, 17, 196596, 17, 196597, 17, 196598, 17, 196599, 17, 196600, 16, 196601, 17, 196602, 17, 196603, 17, 196604, 15, 196605, 17, 196606, 17, 196607, 9, 131072, 8, 131073, 8, 131074, 8, 131075, 8, 131076, 8, 131077, 8, 131078, 8, 131079, 8, 131080, 8, 131081, 8, 131082, 8, 131083, 8, 131084, 8, 131085, 8, 131086, 8, 131087, 8, 131088, 8, 131089, 7, 131090, 17, 131091, 17, 262127, 17, 262128, 17, 262129, 17, 262130, 17, 262131, 15, 262132, 17, 262133, 17, 262134, 17, 262135, 17, 262136, 17, 262137, 17, 262138, 17, 262139, 17, 262140, 17, 262141, 17, 262142, 17, 262143, 9, 196608, 8, 196609, 8, 196610, 8, 196611, 8, 196612, 8, 196613, 8, 196614, 8, 196615, 8, 196616, 8, 196617, 8, 196618, 8, 196619, 8, 196620, 8, 196621, 8, 196622, 8, 196623, 8, 196624, 8, 196625, 7, 196626, 17, 196627, 17, 327663, 17, 327664, 17, 327665, 17, 327666, 17, 327667, 17, 327668, 17, 327669, 17, 327670, 17, 327671, 17, 327672, 17, 327673, 17, 327674, 17, 327675, 17, 327676, 17, 327677, 17, 327678, 17, 327679, 9, 262144, 8, 262145, 8, 262146, 8, 262147, 8, 262148, 8, 262149, 8, 262150, 8, 262151, 8, 262152, 8, 262153, 8, 262154, 8, 262155, 8, 262156, 8, 262157, 8, 262158, 8, 262159, 8, 262160, 8, 262161, 7, 262162, 17, 262163, 17, 393199, 17, 393200, 17, 393201, 17, 393202, 17, 393203, 17, 393204, 17, 393205, 17, 393206, 15, 393207, 17, 393208, 17, 393209, 17, 393210, 15, 393211, 17, 393212, 17, 393213, 17, 393214, 17, 393215, 9, 327680, 8, 327681, 8, 327682, 8, 327683, 8, 327684, 8, 327685, 8, 327686, 8, 327687, 8, 327688, 8, 327689, 8, 327690, 8, 327691, 8, 327692, 8, 327693, 8, 327694, 8, 327695, 8, 327696, 8, 327697, 7, 327698, 17, 327699, 17, 458735, 17, 458736, 5, 458737, 5, 458738, 5, 458739, 5, 458740, 5, 458741, 5, 458742, 5, 458743, 5, 458744, 5, 458745, 5, 458746, 5, 458747, 5, 458748, 5, 458749, 5, 458750, 6, 458751, 9, 393216, 8, 393217, 8, 393218, 8, 393219, 8, 393220, 8, 393221, 8, 393222, 8, 393223, 8, 393224, 8, 393225, 8, 393226, 8, 393227, 8, 393228, 8, 393229, 8, 393230, 8, 393231, 8, 393232, 8, 393233, 7, 393234, 17, 393235, 17, 524271, 17, 524272, 8, 524273, 8, 524274, 8, 524275, 8, 524276, 8, 524277, 8, 524278, 8, 524279, 8, 524280, 8, 524281, 8, 524282, 8, 524283, 8, 524284, 8, 524285, 8, 524286, 7, 524287, 9, 458752, 8, 458753, 8, 458754, 8, 458755, 8, 458756, 8, 458757, 8, 458758, 8, 458759, 8, 458760, 8, 458761, 8, 458762, 8, 458763, 8, 458764, 8, 458765, 8, 458766, 8, 458767, 8, 458768, 8, 458769, 7, 458770, 17, 458771, 17, 589807, 17, 589808, 8, 589809, 8, 589810, 8, 589811, 8, 589812, 8, 589813, 8, 589814, 8, 589815, 8, 589816, 8, 589817, 8, 589818, 8, 589819, 8, 589820, 8, 589821, 8, 589822, 7, 589823, 9, 524288, 8, 524289, 8, 524290, 8, 524291, 8, 524292, 8, 524293, 8, 524294, 8, 524295, 8, 524296, 8, 524297, 8, 524298, 8, 524299, 8, 524300, 8, 524301, 8, 524302, 8, 524303, 8, 524304, 8, 524305, 7, 524306, 17, 524307, 17, 655343, 17, 655344, 11, 655345, 11, 655346, 11, 655347, 11, 655348, 11, 655349, 11, 655350, 11, 655351, 11, 655352, 11, 655353, 11, 655354, 11, 655355, 11, 655356, 11, 655357, 11, 655358, 12, 655359, 9, 589824, 8, 589825, 8, 589826, 8, 589827, 8, 589828, 8, 589829, 8, 589830, 8, 589831, 8, 589832, 8, 589833, 8, 589834, 8, 589835, 8, 589836, 8, 589837, 8, 589838, 8, 589839, 8, 589840, 8, 589841, 7, 589842, 17, 589843, 17, 720879, 17, 720880, 17, 720881, 17, 720882, 17, 720883, 17, 720884, 17, 720885, 17, 720886, 17, 720887, 17, 720888, 17, 720889, 17, 720890, 17, 720891, 17, 720892, 17, 720893, 17, 720894, 17, 720895, 9, 655360, 8, 655361, 8, 655362, 8, 655363, 8, 655364, 8, 655365, 8, 655366, 8, 655367, 8, 655368, 8, 655369, 8, 655370, 8, 655371, 8, 655372, 8, 655373, 8, 655374, 8, 655375, 8, 655376, 8, 655377, 7, 655378, 17, 655379, 17, 786415, 17, 786416, 17, 786417, 15, 786418, 17, 786419, 17, 786420, 17, 786421, 16, 786422, 17, 786423, 17, 786424, 17, 786425, 17, 786426, 17, 786427, 16, 786428, 17, 786429, 17, 786430, 17, 786431, 9, 720896, 8, 720897, 8, 720898, 8, 720899, 8, 720900, 8, 720901, 8, 720902, 8, 720903, 8, 720904, 8, 720905, 8, 720906, 8, 720907, 8, 720908, 8, 720909, 8, 720910, 8, 720911, 8, 720912, 8, 720913, 7, 720914, 17, 720915, 17, 851951, 17, 851952, 17, 851953, 17, 851954, 17, 851955, 17, 851956, 17, 851957, 17, 851958, 17, 851959, 15, 851960, 17, 851961, 17, 851962, 17, 851963, 17, 851964, 17, 851965, 15, 851966, 17, 851967, 9, 786432, 8, 786433, 8, 786434, 8, 786435, 8, 786436, 8, 786437, 8, 786438, 8, 786439, 8, 786440, 8, 786441, 8, 786442, 8, 786443, 8, 786444, 8, 786445, 8, 786446, 8, 786447, 8, 786448, 8, 786449, 7, 786450, 17, 786451, 17, 917487, 17, 917488, 17, 917489, 17, 917490, 17, 917491, 15, 917492, 17, 917493, 17, 917494, 17, 917495, 17, 917496, 17, 917497, 17, 917498, 17, 917499, 17, 917500, 17, 917501, 17, 917502, 17, 917503, 9, 851968, 8, 851969, 8, 851970, 8, 851971, 8, 851972, 8, 851973, 8, 851974, 8, 851975, 8, 851976, 8, 851977, 8, 851978, 8, 851979, 8, 851980, 8, 851981, 8, 851982, 8, 851983, 8, 851984, 8, 851985, 7, 851986, 17, 851987, 17, 983023, 17, 983024, 17, 983025, 17, 983026, 17, 983027, 17, 983028, 17, 983029, 17, 983030, 17, 983031, 17, 983032, 17, 983033, 17, 983034, 16, 983035, 17, 983036, 17, 983037, 17, 983038, 15, 983039, 9, 917504, 8, 917505, 8, 917506, 8, 917507, 8, 917508, 8, 917509, 8, 917510, 8, 917511, 8, 917512, 8, 917513, 8, 917514, 8, 917515, 8, 917516, 8, 917517, 8, 917518, 8, 917519, 8, 917520, 8, 917521, 7, 917522, 17, 917523, 17, 1048559, 17, 1048560, 17, 1048561, 17, 1048562, 17, 1048563, 17, 1048564, 17, 1048565, 17, 1048566, 17, 1048567, 16, 1048568, 17, 1048569, 17, 1048570, 17, 1048571, 17, 1048572, 17, 1048573, 17, 1048574, 17, 1048575, 9, 983040, 8, 983041, 8, 983042, 8, 983043, 8, 983044, 8, 983045, 8, 983046, 8, 983047, 8, 983048, 8, 983049, 8, 983050, 8, 983051, 8, 983052, 8, 983053, 8, 983054, 8, 983055, 8, 983056, 8, 983057, 7, 983058, 17, 983059, 17, 1114095, 17, 1114096, 17, 1114097, 17, 1114098, 16, 1114099, 17, 1114100, 17, 1114101, 15, 1114102, 17, 1114103, 17, 1114104, 17, 1114105, 17, 1114106, 15, 1114107, 17, 1114108, 17, 1114109, 17, 1114110, 17, 1114111, 10, 1048576, 11, 1048577, 11, 1048578, 11, 1048579, 11, 1048580, 11, 1048581, 11, 1048582, 11, 1048583, 11, 1048584, 11, 1048585, 11, 1048586, 11, 1048587, 11, 1048588, 11, 1048589, 11, 1048590, 11, 1048591, 11, 1048592, 11, 1048593, 12, 1048594, 17, 1048595, 17, 1179631, 17, 1179632, 17, 1179633, 17, 1179634, 17, 1179635, 17, 1179636, 17, 1179637, 17, 1179638, 17, 1179639, 17, 1179640, 17, 1179641, 17, 1179642, 17, 1179643, 17, 1179644, 17, 1179645, 17, 1179646, 17, 1179647, 17, 1114112, 17, 1114113, 17, 1114114, 17, 1114115, 17, 1114116, 17, 1114117, 17, 1114118, 17, 1114119, 17, 1114120, 17, 1114121, 17, 1114122, 17, 1114123, 17, 1114124, 17, 1114125, 17, 1114126, 17, 1114127, 17, 1114128, 17, 1114129, 17, 1114130, 17, 1114131, 17, 1245167, 17, 1245168, 17, 1245169, 17, 1245170, 17, 1245171, 17, 1245172, 17, 1245173, 17, 1245174, 17, 1245175, 17, 1245176, 17, 1245177, 17, 1245178, 17, 1245179, 17, 1245180, 17, 1245181, 17, 1245182, 17, 1245183, 17, 1179648, 17, 1179649, 17, 1179650, 17, 1179651, 17, 1179652, 17, 1179653, 17, 1179654, 17, 1179655, 17, 1179656, 17, 1179657, 17, 1179658, 17, 1179659, 17, 1179660, 17, 1179661, 17, 1179662, 17, 1179663, 17, 1179664, 17, 1179665, 17, 1179666, 17, 1179667, 17 )

[node name="enemies" type="Node2D" parent="."]

editor/display_folded = true

[node name="Enemy1" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 96, 240 )

[node name="Enemy7" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 88, 176 )

[node name="Enemy8" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 88, 80 )

[node name="Enemy9" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 184, 80 )

[node name="Enemy10" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 184, 176 )

[node name="Enemy2" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 16, 152 )

[node name="Enemy3" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 64, 40 )

[node name="Enemy4" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 184, 16 )

[node name="Enemy5" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 248, 96 )

[node name="Enemy6" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 224, 208 )

[node name="Enemy2 2" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 40, 208 )
can_attack = true

[node name="Enemy23" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 24, 96 )
can_attack = true

[node name="Enemy24" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 120, 16 )
can_attack = true

[node name="Enemy25" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 232, 56 )
can_attack = true

[node name="Enemy26" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 256, 152 )
can_attack = true

[node name="Enemy27" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 176, 240 )
can_attack = true

[node name="Enemy28" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 136, 176 )
can_attack = true

[node name="Enemy29" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 88, 128 )
can_attack = true

[node name="Enemy30" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 136, 80 )
can_attack = true

[node name="Enemy31" parent="enemies" groups=[ "keeper" ] instance=ExtResource( 6 )]

transform/pos = Vector2( 184, 128 )
can_attack = true

[node name="Player" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( -57.307, 134.718 )

[node name="columns" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131063, 130, -65531, 130, -65527, 131, 5, 131, 9, 132, 13, 130, 65541, 132, 65549, 131, 131074, 130, 131085, 132, 131087, 130, 196610, 131, 196623, 131, 327665, 130, 327667, 130, 327669, 130, 327671, 130, 327673, 130, 327675, 130, 327677, 130, 262146, 132, 262159, 132, 393201, 131, 393203, 131, 393205, 131, 393207, 131, 393209, 131, 393211, 131, 393213, 131, 327681, 130, 327695, 130, 458737, 132, 458739, 132, 458741, 132, 458743, 132, 458745, 132, 458747, 132, 458749, 132, 393217, 131, 393231, 131, 524273, 130, 524275, 130, 524277, 130, 524279, 130, 524281, 130, 524283, 130, 524285, 130, 458753, 132, 458767, 132, 589809, 131, 589811, 131, 589813, 131, 589815, 131, 589817, 131, 589819, 131, 589821, 131, 655345, 132, 655347, 132, 655349, 132, 655351, 132, 655353, 132, 655355, 132, 655357, 132, 589825, 130, 589839, 130, 655361, 131, 655375, 131, 720897, 132, 720911, 132, 786435, 130, 786445, 130, 851971, 131, 851976, 130, 851981, 131, 917507, 132, 917512, 131, 917517, 132, 983048, 132 )
__meta__ = { "_edit_lock_":true }

[node name="Spawn" type="Position2D" parent="."]

transform/pos = Vector2( -230, 130 )

[node name="Wizard5" parent="." groups=[ "interactive" ] instance=ExtResource( 8 )]

transform/pos = Vector2( 135.5, 128 )

[node name="Magic" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Dialog" parent="HUD" instance=ExtResource( 9 )]

margin/left = 320.0
margin/top = 136.0
margin/right = 4.0
margin/bottom = 76.0

[node name="Coin" parent="HUD" instance=ExtResource( 10 )]

visibility/visible = false
transform/pos = Vector2( 400, 240 )
transform/scale = Vector2( 2, 2 )

[node name="coins" type="Control" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 416.0
margin/right = 696.0
margin/bottom = 456.0

[node name="coin0" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 3, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin1" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 35, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin2" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 67, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin3" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 99, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin4" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 131, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin5" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 163, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin6" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 195, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin7" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 227, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin8" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 259, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin9" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 291, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin10" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 323, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin11" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 355, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin12" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 387, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin13" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 419, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin14" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 451, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin15" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 483, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin16" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 515, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin17" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 547, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin18" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 579, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="coin19" parent="HUD/coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 611, 25 )
transform/scale = Vector2( 0.5, 0.5 )

[node name="EndTitles" parent="." instance=ExtResource( 11 )]

layer = 3

